efk/04-kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: efk
  labels:
    app: kibana
spec:
  selector:
    app: kibana
  ports:
  - port: 5601

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: efk
  labels:
    app: kibana
spec:
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        #image: docker.elastic.co/kibana/kibana:7.6.2
        image: dockerhub.datagrand.com/yunwei-k8s/kibana/kibana:7.6.2
        resources:
          limits:
            cpu: 200m
          requests:
            cpu: 200m
        ports:
        - containerPort: 5601
