efk/05-kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: efk
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kibana-k8s-test.datagrand.com
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 5601
